# 365_Days_of_Code

./: .gitignore  README.md  requirements.txt
Yacine_B/: aoc_day7.py  class_poly.py  day_1.py  exos.py  kattis.py  leetcode.py  linked_list.py  mancala.c  middle_linked_list.py  pi_approx.py  poly.py  quadratic_poly.py  test_git.py
Yacine_B/data_structures/: dichotomic_search.py
Yacine_B/game_of_life/: LICENSE  README.md  main.py  set_canva.py  start_configs.py
Yacine_B/machine_learning/: BTC-EUR.csv  DOGE-EUR.csv  classification_model.ipynb  datavisualization_seaborn.ipynb  image_analysis.ipynb  linear_regression_random_dataset.ipynb  numpy_img_manip.py  titanic_model_selection.ipynb  titanic_with_pre-processing.ipynb  trading_turtle_strategy.ipynb  z-score_feature_scaling.ipynb
Yacine_B/mancala/: LICENSE  README.md  functions.c  history.txt  main  main.c
Yacine_B/matrix_linearization/: gauss.py
Yacine_B/package_gauss/: README.md  setup.cfg
Yacine_B/package_gauss/src/: gauss.py  test.py
Yacine_B/package_poly/: LICENSE  README.md  pyproject.toml  setup.cfg
Yacine_B/python_project_testing/: main.c  test_world.py
Yacine_B/sorting_algorithms/: algorithms  bubble.py  data.py  functions.py  plot_time_complexity.py  selection.py  test_runtime.py
Yacine_B/web initiation/: index.css  index.html
Yacine_B/web_initiation/: async.html  async.js  bases.js  opp.html  opp.js
eliotfgn/: day1.py  day2.py  day3.py  day5.py  day7.py  day9.py  input.in
eliotfgn/algorithms/: day8.py
eliotfgn/userForm-q/: main.cpp  user.cpp  user.h  userForm-q.pro  userform.cpp  (+4 more)
(+53 files in other folders)
