[metadata]
name = matrix_solve-pkg-Yacine-Steeve
version = 0.0.1
author = Yacine BOUKARI
author_email = steeveboukari9@gmail.com
description = A small package for matrix solving.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YacineSteeve/365_Days_of_Code/tree/main/Yacine_B/matrix_solve
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

python_requires = >=3.6
